# dude-dirty-usb-disconnect

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions_custom.csv  platformio.ini  sdkconfig.debug.defaults  sdkconfig.defaults
.github/: diagram.drawio
.github/workflows/: release.yml  workflow.yml
PCB/ssus/: ssus.kicad_pcb  ssus.kicad_pro  ssus.kicad_sch
PCB/ssus/3D/: User Library-GSB1C41X111DS1HR.STEP  User Library-Switch-CK-KMR2.STEP  User Library-WS2812-2020.STEP
PCB/ssus/fab/: BOM.csv
components/app_adc/: CMakeLists.txt  app_adc.c  app_adc.h
components/app_hub_control/: CMakeLists.txt  app_hub_control.c  app_hub_control.h
components/app_led/: CMakeLists.txt  app_led.c  app_led.h
src/: main.c
